# innovatex-hackathon

./: .gitignore  Cuestionario_Diagnostico_Privacidad.md  PLAN.md  README.md  descripcion_solucion.md  questions.md
.opencode/: opencode.json
innovatex-hackathon/: .env  (+6 more)
innovatex-hackathon/backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
innovatex-hackathon/backend/alembic/: env.py  script.py.mako
innovatex-hackathon/backend/alembic/versions/: 365022fab9e0_initial_schema.py
innovatex-hackathon/backend/app/: config.py  database.py  dependencies.py  main.py
innovatex-hackathon/backend/app/models/: __init__.py  action_item.py  assessment.py  assessment_answer.py  base.py  block.py  company.py  company_member.py  profile.py  question.py  recommendation.py  score.py  share_link.py
innovatex-hackathon/backend/app/reports/: __init__.py  excel_generator.py  pdf_generator.py
innovatex-hackathon/backend/app/routers/: assessments.py  auth.py  companies.py  questions.py  reports.py
innovatex-hackathon/backend/app/schemas/: __init__.py  assessment.py  company.py  report.py
innovatex-hackathon/backend/app/seeds/: data.py  runner.py
innovatex-hackathon/backend/app/services/: __init__.py  assessment_service.py  company_service.py  question_service.py  report_service.py  scoring_service.py  tenant_service.py
innovatex-hackathon/backend/tests/: conftest.py  test_assessment_schemas.py  test_assessment_service.py  test_assessments_router.py  test_main_app_wiring.py  test_phase3_smoke.py  test_question_service.py  test_questions_router.py
(+82 files in other folders)
